--- a/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
@@ -40,7 +40,7 @@
                     android:layout_weight="1"
                     android:maxWidth="200dp"
                     android:textSize="14sp"
-                    android:text="Nothing playing"
+                    android:text="@string/nothing_playing"
                     android:singleLine="true"/>
                 
                 <LinearLayout
@@ -51,61 +51,55 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
-                        android:text="0:00"/>
+                        android:text="@string/zero_timer"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
-                        android:text="/"/>
+                        android:text="@string/timer_separator"/>
                     <TextView
                         android:id="@+id/durationTotal"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
-                        android:text="0:00"
+                        android:text="@string/zero_timer"
                         android:gravity="right"/>
                 </LinearLayout>
 
             </LinearLayout>
             
         </LinearLayout>
-        
-        <android.support.constraint.ConstraintLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                
-                <LinearLayout
-                    android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="center_horizontal">
+                <Button
+                    android:id="@+id/mediaButtonBack"
+                    android:layout_width="64dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center_horizontal">
-                    <Button
-                        android:id="@+id/mediaButtonBack"
-                        android:layout_width="64dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/media_previous"
-                        android:backgroundTint="@color/mediaButtons"/>
-                    <Button
-                        android:id="@+id/mediaButtonPlay"
-                        android:layout_width="64dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/media_play"
-                        android:backgroundTint="@color/mediaButtons"/>
-                    <Button
-                        android:id="@+id/mediaButtonForward"
-                        android:layout_width="64dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/media_next"
-                        android:backgroundTint="@color/mediaButtons"/>
-                </LinearLayout>
+                    android:background="@drawable/media_previous"
+                    android:backgroundTint="@color/mediaButtons"/>
+                <Button
+                    android:id="@+id/mediaButtonPlay"
+                    android:layout_width="64dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/media_play"
+                    android:backgroundTint="@color/mediaButtons"/>
+                <Button
+                    android:id="@+id/mediaButtonForward"
+                    android:layout_width="64dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/media_next"
+                    android:backgroundTint="@color/mediaButtons"/>
             </LinearLayout>
-            
-        </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
         
     </LinearLayout>
 
