--- a/NotABadPlayer/app/src/main/res/menu/navigation.xml
+++ b/NotABadPlayer/app/src/main/res/menu/navigation.xml
@@ -7,7 +7,7 @@
         android:title="@string/title_albums"/>
 
     <item
-        android:id="@+id/navigation_playlists"
+        android:id="@+id/navigation_lists"
         android:icon="@drawable/baseline_library_books_black_18dp"
         android:title="@string/title_playlists" />
 
