--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -15,8 +15,7 @@
         <ImageView
             android:id="@+id/cover"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.25"/>
+            android:layout_height="fill_parent"/>
     </FrameLayout>
     
     <LinearLayout
