--- a/NotABadPlayer/app/src/main/res/layout/header_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/header_album.xml
@@ -14,12 +14,14 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="5dp" />
+        android:layout_height="1dp" />
 
     <TextView
         android:id="@+id/albumTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:singleLine="true"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -28,12 +30,29 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="2dp" />
+        android:layout_height="1dp" />
+
+    <TextView
+        android:id="@+id/albumArtist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:singleLine="true"
+        android:textSize="15sp"
+        android:textAlignment="center"
+        android:textColor="@color/colorAlbumItemText"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 
     <TextView
         android:id="@+id/albumDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
         android:singleLine="true"
         android:textSize="15sp"
         android:textAlignment="center"
