--- a/NotABadPlayer/app/src/main/res/layout/item_album_song.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_album_song.xml
@@ -37,8 +37,7 @@
             android:layout_height="wrap_content"
             android:textSize="18dp"
             android:textColor="@color/colorAlbumItemText"
-            android:singleLine="true"
-            android:ellipsize="start"/>
+            android:singleLine="true"/>
 
         <TextView
             android:id="@+id/duration"
