Minor interface imporvements

--- a/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
@@ -8,6 +8,8 @@
         android:id="@+id/primaryArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="3dp"
         android:numColumns="2"
         android:horizontalSpacing="2dp"
         android:gravity="center"/>
