--- a/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
@@ -14,6 +14,8 @@
             <include layout="@layout/layout_settings_appearance"/>
             
             <include layout="@layout/layout_settings_keybinds"/>
+
+            <include layout="@layout/layout_settings_reset"/>
             
             <include layout="@layout/layout_settings_about"/>
         </LinearLayout>
