New feature - jump to current playlist; also the recall functionality now stores the playlists, so when you go back, you can navigate the playlist rather than being stuck on a single track

--- a/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
@@ -82,6 +82,12 @@
                 android:orientation="horizontal"
                 android:gravity="center_horizontal">
                 <Button
+                    android:id="@+id/mediaButtonPlaylist"
+                    android:layout_width="48dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/playlist"
+                    android:backgroundTint="@color/mediaButtons"/>
+                <Button
                     android:id="@+id/mediaButtonBack"
                     android:layout_width="64dp"
                     android:layout_height="wrap_content"
@@ -99,6 +105,9 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/media_next"
                     android:backgroundTint="@color/mediaButtons"/>
+                <Space
+                    android:layout_width="48dp"
+                    android:layout_height="0dp" />
             </LinearLayout>
         </LinearLayout>
         
