--- a/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_search.xml
@@ -52,7 +52,7 @@
         android:layout_height="5dp" />
     
     <ListView
-        android:id="@+id/searchResults"
+        android:id="@+id/searchResultsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
