--- a/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
     
     <GridView
-        android:id="@+id/albumSongs"
+        android:id="@+id/albumSongsGrid"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:numColumns="1"
