--- a/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_albums.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
     
     <GridView
-        android:id="@+id/primaryArea"
+        android:id="@+id/primaryAreaGrid"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="3dp"
