--- a/NotABadPlayer/app/src/main/res/layout/fragment_playlists.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_playlists.xml
@@ -26,6 +26,13 @@
             android:layout_height="wrap_content"
             android:text="@string/playlist_delete"
             android:textColor="@color/colorPlaylistsButtonText"/>
+        <Button
+            android:id="@+id/donePlaylistButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/playlist_done"
+            android:textColor="@color/colorPlaylistsButtonText"
+            android:visibility="gone"/>
     </LinearLayout>
 
     <Space
