--- a/NotABadPlayer/app/src/main/res/values/colors.xml
+++ b/NotABadPlayer/app/src/main/res/values/colors.xml
@@ -21,6 +21,13 @@
     <color name="colorPlaylistsItemText">#313131</color>
     <color name="colorPlaylistsItemSubText">#6c6c6c</color>
     <color name="colorPlaylistsButtonText">#ffffff</color>
+
+    <color name="colorPlaylistsEditTitleText">#4CAF50</color>
+    <color name="colorPlaylistsEditText">#ffffff</color>
+    <color name="colorPlaylistsEditItemText">#ffffff</color>
+    <color name="colorPlaylistsEditItemSubText">#ffffff</color>
+    <color name="colorPlaylistsEditButtonText">#ffffff</color>
+    <color name="colorPlaylistsEditSelectedText">#2196F3</color>
     
     <color name="colorSearchFieldText">#313131</color>
     <color name="colorSearchFieldHint">#6e6c6c</color>
